--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
+
+    <title>OnlyFans Alternative in India | Affordable Creator Platform – Coming Soon</title>
+
+    <!-- Primary SEO -->
+    <meta name="description" content="Looking for an OnlyFans alternative in India? We are launching an affordable creator platform for Indian creators and fans. Low fees, secure payouts, and full control. Coming soon.">
+    <meta name="keywords" content="onlyfans alternative india, affordable creator platform india, fan subscription platform india, content monetization india, premium content creators">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Your Brand Name">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://onlyfansindia.in/">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://onlyfansindia.in/">
+    <meta property="og:title" content="OnlyFans Alternative in India – Affordable Creator Platform">
+    <meta property="og:description" content="An affordable OnlyFans alternative for Indian creators. Launching soon.">
+    <meta property="og:image" content="https://onlyfansindia.in/image.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="OnlyFans Alternative in India – Coming Soon">
+    <meta name="twitter:description" content="A low-cost creator subscription platform made for India.">
+    <meta name="twitter:image" content="https://onlyfansindia.in/image.jpg">
+
+    <!-- Performance -->
+    <meta name="theme-color" content="#000000">
+    <link rel="preload" as="image" href="image.jpg">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Affordable Creator Platform India",
+      "url": "https://onlyfansindia.in/",
+      "description": "An affordable OnlyFans alternative in India for content creators and fans.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Your Brand Name",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "email": "ranasanjayraj101@gmail.com",
+          "contactType": "support"
+        }
+      }
+    }
+    </script>
 
     <style>
-        /* Reset */
         * {
             margin: 0;
             padding: 0;
@@ -16,41 +62,64 @@
         html, body {
             width: 100%;
             height: 100%;
-            overflow: hidden;
             font-family: Arial, sans-serif;
             background-color: #000;
+            color: #fff;
         }
 
-        /* Fullscreen image container */
         .container {
             width: 100%;
             height: 100%;
             background-image: url('image.jpg');
-            background-size: cover;      /* Maintain aspect ratio */
-            background-position: center; /* Center the image */
-            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
             position: relative;
         }
 
-        /* Contact text */
+        .overlay {
+            position: absolute;
+            inset: 0;
+            background: rgba(0,0,0,0.55);
+        }
+
+        .content {
+            position: relative;
+            z-index: 2;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 40px;
+            max-width: 800px;
+        }
+
+        h1 {
+            font-size: 38px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            opacity: 0.9;
+        }
+
         .contact {
             position: absolute;
             bottom: 15px;
             right: 20px;
-            color: #ffffff;
             font-size: 14px;
-            opacity: 0.85;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0,0,0,0.4);
             padding: 6px 10px;
             border-radius: 4px;
         }
 
-        /* Mobile adjustments */
         @media (max-width: 600px) {
-            .contact {
-                font-size: 12px;
-                bottom: 10px;
-                right: 10px;
+            h1 {
+                font-size: 28px;
+            }
+            p {
+                font-size: 16px;
             }
         }
     </style>
@@ -58,6 +127,20 @@
 <body>
 
     <div class="container">
+        <div class="overlay"></div>
+
+        <div class="content">
+            <h1>OnlyFans Alternative in India</h1>
+            <p>
+                We are building an affordable creator subscription platform designed for India.
+                A powerful alternative to OnlyFans with lower fees, local payment support,
+                and complete control for creators.
+            </p>
+            <p style="margin-top:15px;">
+                Launching soon for Indian creators and fans.
+            </p>
+        </div>
+
         <div class="contact">
             Contact: ranasanjayraj101@gmail.com
         </div>
